Add ugoira support
This is very basic and unfortunately is limited due to Discords upload size limit

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ PixivPy = "^3.5"
 requests-toolbelt = "^0.9.1"
 pyquery = "^1.4"
 requests = "^2.22"
+Pillow = "^6.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
