Convert Ugoira to WebM instead for better uploading
Ugoira at most has either: 8MB of images with 500 frames or 30MB of images with 100 frames, 40~ frames =  1.5 seconds of encoding, longest encode time should be 750 seconds

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ requests-toolbelt = "^0.9.1"
 pyquery = "^1.4"
 requests = "^2.22"
 Pillow = "^6.2"
+ffmpeg-python = "^0.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
