Add Ugoira Format and Post Limit to configuration values
Also simplify messaging sending by using a single call when not sending multiple embeds

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
 DISCORD_API_KEY=
+
 PIXIV_LOGIN=
 PIXIV_PASSWORD=
+PIXIV_POST_LIMIT=5
+PIXIV_UGOIRA_FORMAT=mp4
+
+ARTSTAION_POST_LIMIT=5
+
 FA_COOKIE_A=
 FA_COOKIE_B=
