Fix misspelling on ArtStation ENV value

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ PIXIV_PASSWORD=
 PIXIV_POST_LIMIT=5
 PIXIV_UGOIRA_FORMAT=mp4
 
-ARTSTAION_POST_LIMIT=5
+ARTSTATION_POST_LIMIT=5
 
 FA_COOKIE_A=
 FA_COOKIE_B=
