--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,28 @@
-node_modules
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional eslint cache
+.eslintcache
+
+# dotenv environment variables file
 .env
+.env.test
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Build / generated output
 build
+dist
+
+# IDE configuration
 .vscode
