chore: add a good linting practice to code base and run it over
using prettier with my personal preferences added to it and eslint, will add this to github action setup

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,7 +1,8 @@
-# /node_modules/* in the project root is ignored by default
+node_modules
 # build artefacts
-dist/*
-coverage/*
+dist
+build
+coverage
 # data definition files
 **/*.d.ts
 # custom definition files
