--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,11 +3,12 @@
         "es2020": true,
         "node": true
     },
-    "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended"
-    ],
     "parser": "@typescript-eslint/parser",
+    "extends": [
+        "plugin:@typescript-eslint/recommended",
+        "prettier/@typescript-eslint",
+        "plugin:prettier/recommended"
+    ],
     "parserOptions": {
         "ecmaVersion": 11,
         "sourceType": "module"
@@ -15,6 +16,5 @@
     "plugins": [
         "@typescript-eslint"
     ],
-    "rules": {
-    }
+    "rules": {}
 }
