--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "node dist/src/index.js",
     "start:dev": "nodemon",
     "build": "tsc",
-    "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix"
+    "lint:check": "eslint src/ --ext .ts",
+    "lint:fix": "eslint src/ --ext .ts --fix",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "adm-zip": "^0.4.16",
@@ -35,10 +37,13 @@
     "@types/rimraf": "^3.0.0",
     "@types/tough-cookie": "^4.0.0",
     "@types/ws": "^7.2.6",
-    "@typescript-eslint/eslint-plugin": "^3.8.0",
-    "@typescript-eslint/parser": "^3.8.0",
-    "eslint": "^7.6.0",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
+    "eslint": "^7.10.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "nodemon": "^2.0.4",
+    "prettier": "^2.1.2",
     "ts-node": "^8.10.2"
   }
 }
