--- a/package.json
+++ b/package.json
@@ -16,24 +16,23 @@
   "dependencies": {
     "adm-zip": "^0.4.16",
     "cheerio": "^1.0.0-rc.3",
-    "discord.js": "^12.2.0",
+    "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "fluent-ffmpeg": "^2.1.2",
-    "got": "^11.5.2",
+    "got": "^11.7.0",
     "html-to-text": "^5.1.1",
-    "luxon": "^1.24.1",
+    "luxon": "^1.25.0",
     "pixiv-app-api": "^1.2.1",
     "rimraf": "^3.0.2",
-    "tough-cookie": "^4.0.0",
-    "typescript": "^3.9.7"
+    "tough-cookie": "^4.0.0"
   },
   "devDependencies": {
     "@types/adm-zip": "^0.4.33",
-    "@types/cheerio": "^0.22.21",
-    "@types/fluent-ffmpeg": "^2.1.14",
-    "@types/html-to-text": "^5.1.1",
-    "@types/luxon": "^1.24.3",
-    "@types/node": "^14.0.27",
+    "@types/cheerio": "^0.22.22",
+    "@types/fluent-ffmpeg": "^2.1.15",
+    "@types/html-to-text": "^5.1.2",
+    "@types/luxon": "^1.25.0",
+    "@types/node": "^14.11.2",
     "@types/rimraf": "^3.0.0",
     "@types/tough-cookie": "^4.0.0",
     "@types/ws": "^7.2.6",
@@ -44,6 +43,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.2",
-    "ts-node": "^8.10.2"
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7"
   }
 }
