--- a/package.json
+++ b/package.json
@@ -16,32 +16,32 @@
   "dependencies": {
     "adm-zip": "^0.4.16",
     "cheerio": "^1.0.0-rc.3",
-    "discord.js": "^12.3.1",
+    "discord.js": "^12.4.0",
     "dotenv": "^8.2.0",
     "fluent-ffmpeg": "^2.1.2",
-    "got": "^11.7.0",
+    "got": "^11.8.0",
     "html-to-text": "^5.1.1",
     "luxon": "^1.25.0",
-    "pixiv-app-api": "^1.2.1",
+    "pixiv-app-api": "github:sn0wcrack/pixiv-app-api#bugfix/cloudflare-captcha",
     "rimraf": "^3.0.2",
     "tough-cookie": "^4.0.0"
   },
   "devDependencies": {
     "@types/adm-zip": "^0.4.33",
     "@types/cheerio": "^0.22.22",
-    "@types/fluent-ffmpeg": "^2.1.15",
+    "@types/fluent-ffmpeg": "^2.1.16",
     "@types/html-to-text": "^5.1.2",
     "@types/luxon": "^1.25.0",
-    "@types/node": "^14.11.2",
+    "@types/node": "^14.14.0",
     "@types/rimraf": "^3.0.0",
     "@types/tough-cookie": "^4.0.0",
-    "@types/ws": "^7.2.6",
+    "@types/ws": "^7.2.7",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
-    "eslint": "^7.10.0",
-    "eslint-config-prettier": "^6.12.0",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.13.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.6",
     "prettier": "^2.1.2",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
