--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "adm-zip": "^0.4.16",
+    "chalk": "^4.1.0",
     "cheerio": "^1.0.0-rc.3",
     "discord.js": "^12.4.0",
     "dotenv": "^8.2.0",
