add pixiv cookie to example env
fix detecting single page posts to prevent unnecessary api calls

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ DISABLED_SITES=
 
 PIXIV_LOGIN=
 PIXIV_PASSWORD=
+PIXIV_COOKIE=
 PIXIV_POST_LIMIT=5
 PIXIV_UGOIRA_FORMAT=mp4
 PIXIV_UGOIRA_BITRATE=2000
