feat: add twitter video support
twitter video support is temporary
chore: refactor some code
chore: upgrade dependencies, such as typescript 4
feat: add a new message to let people know saucybot is processing their messages, as sometimes its unclear, in future versions this will be an inline reply

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,8 @@ FA_COOKIE_B=
 
 EHENTAI_IPB_ID=
 EHENTAI_IPB_PASS=
+
+TWITTER_API_KEY=
+TWITTER_API_SECRET=
+TWITTER_ACCESS_TOKEN=
+TWITTER_ACCESS_SECRET=
