--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "luxon": "^1.25.0",
     "pixiv-web-api": "^0.1.5",
     "rimraf": "^3.0.2",
-    "tough-cookie": "^4.0.0"
+    "tough-cookie": "^4.0.0",
+    "twitter-api-client": "^1.3.8"
   },
   "devDependencies": {
     "@types/adm-zip": "^0.4.33",
@@ -37,14 +38,14 @@
     "@types/rimraf": "^3.0.0",
     "@types/tough-cookie": "^4.0.0",
     "@types/ws": "^7.2.7",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
     "eslint": "^7.11.0",
-    "eslint-config-prettier": "^6.13.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.1.4",
     "nodemon": "^2.0.6",
     "prettier": "^2.1.2",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.7"
+    "ts-node": "^10.0.0",
+    "typescript": "^4.1.0"
   }
 }
