--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
   },
   "dependencies": {
     "adm-zip": "^0.5.5",
-    "bufferutil": "^4.0.3",
     "chalk": "^4.1.0",
     "cheerio": "^1.0.0-rc.3",
     "discord.js": "^13.0.0-dev.fe6cc0c.1625184228",
     "dotenv": "^10.0.0",
-    "erlpack": "^0.1.3",
     "fluent-ffmpeg": "^2.1.2",
     "got": "^11.8.0",
     "html-to-text": "^8.0.0",
@@ -28,9 +26,7 @@
     "pixiv-web-api": "^0.1.5",
     "rimraf": "^3.0.2",
     "tough-cookie": "^4.0.0",
-    "twitter-api-client": "^1.3.8",
-    "utf-8-validate": "^5.0.5",
-    "zlib-sync": "^0.1.7"
+    "twitter-api-client": "^1.3.8"
   },
   "devDependencies": {
     "@types/adm-zip": "^0.4.33",
