feat: upgrade to discord.js v13.2.0
also upgrade some other dependencies

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "adm-zip": "^0.5.5",
     "chalk": "^4.1.0",
     "cheerio": "^1.0.0-rc.3",
-    "discord.js": "^13.0.0-dev.4886ae2.1627085022",
+    "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
     "fluent-ffmpeg": "^2.1.2",
     "got": "^11.0.0",
@@ -33,16 +33,16 @@
     "@types/cheerio": "^0.22.30",
     "@types/fluent-ffmpeg": "^2.1.18",
     "@types/html-to-text": "^8.0.1",
-    "@types/luxon": "^1.27.1",
+    "@types/luxon": "^2.0.5",
     "@types/node": "^16.4.1",
     "@types/rimraf": "^3.0.1",
     "@types/tough-cookie": "^4.0.1",
-    "@types/ws": "^7.4.7",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
-    "eslint": "^7.31.0",
+    "@types/ws": "^8.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
+    "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
     "ts-node": "^10.1.0",
