fix: use node 16+ testing
Node 16+ is now required by Discord.js v13 or newer

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -23,23 +23,15 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [ '14.x', '16.x' ] # LTS and Latest
+        node-version: [ '16', '17' ] # LTS and Latest
 
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - id: cache_dir
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - name: Cache
-        uses: actions/cache@v1
-        with:
-          path: ${{ steps.cache_dir.outputs.dir }}
-          key: ${{ runner.os }}-node-${{ matrix.node-version }}-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-             ${{ runner.os }}-node-${{ matrix.node-version }}-
+          cache: 'yarn'
       - run: yarn install --frozen-lockfile
       - name: Run linter
         run: yarn lint:check
