--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -25,10 +25,11 @@ jobs:
       # Setup working environment for Docker
       - uses: actions/checkout@v2
       - id: docker_meta
-        uses: crazy-max/ghaction-docker-meta@v1
+        uses: docker/metadata-action@v3
         with:
           images: ghcr.io/sn0wcrack/saucybot-discord
-          tag-match: v(.*)
+          tags: |
+            type=match,pattern=v(.*),group=1
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
       - name: 'Cache Buildx Cache'
@@ -41,8 +42,8 @@ jobs:
       - name: 'Login to Container Registry'
         uses: docker/login-action@v1
         with:
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.RELEASE_TOKEN }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
           registry: ghcr.io
       - name: 'Build and Publish'
         uses: docker/build-push-action@v2
@@ -54,6 +55,10 @@ jobs:
           labels: ${{ steps.docker_meta.outputs.labels }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
+      - name: 'Move cache'
+        run:
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
   
   deploy:
     name: 'Deploy'
