feat: run dockerfile on node-lts
chore: upgrade fluent-ffmpeg types to remove custom override.
feat: general dependency upgrade

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Sn0wCrack",
   "license": "MIT",
   "scripts": {
-    "start": "node dist/src/index.js",
+    "start": "npm run build && node dist/src/index.js",
     "start:dev": "nodemon",
     "build": "tsc",
     "lint:check": "eslint src/ --ext .ts",
@@ -31,7 +31,7 @@
   "devDependencies": {
     "@types/adm-zip": "^0.4.33",
     "@types/cheerio": "^0.22.30",
-    "@types/fluent-ffmpeg": "^2.1.18",
+    "@types/fluent-ffmpeg": "^2.1.20",
     "@types/html-to-text": "^8.0.1",
     "@types/luxon": "^2.0.5",
     "@types/node": "^16.4.1",
