--- a/package.json
+++ b/package.json
@@ -1,51 +1,58 @@
 {
-  "name": "saucybot",
-  "version": "1.4.8",
-  "description": "A discord bot that fills in the gaps ",
-  "repository": {},
-  "author": "Sn0wCrack",
-  "license": "MIT",
-  "scripts": {
-    "start": "npm run build && node dist/src/index.js",
-    "start:dev": "nodemon",
-    "build": "tsc",
-    "lint:check": "eslint src/ --ext .ts",
-    "lint:fix": "eslint src/ --ext .ts --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "adm-zip": "^0.5.5",
-    "cheerio": "^1.0.0-rc.3",
-    "discord.js": "^13.3.0",
-    "dotenv": "^10.0.0",
-    "fluent-ffmpeg": "^2.1.2",
-    "got": "^11.0.0",
-    "html-to-text": "^8.0.0",
-    "luxon": "^2.0.1",
-    "picocolors": "^1.0.0",
-    "pixiv-web-api": "^0.1.5",
-    "rimraf": "^3.0.2",
-    "tough-cookie": "^4.0.0",
-    "twitter-api-client": "^1.3.8"
-  },
-  "devDependencies": {
-    "@types/adm-zip": "^0.4.33",
-    "@types/cheerio": "^0.22.30",
-    "@types/fluent-ffmpeg": "^2.1.20",
-    "@types/html-to-text": "^8.0.1",
-    "@types/luxon": "^2.0.5",
-    "@types/node": "^16.4.1",
-    "@types/rimraf": "^3.0.1",
-    "@types/tough-cookie": "^4.0.1",
-    "@types/ws": "^8.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
-    "eslint": "^8.1.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "nodemon": "^2.0.12",
-    "prettier": "^2.3.2",
-    "ts-node": "^10.1.0",
-    "typescript": "^4.3.5"
-  }
+    "name": "saucybot",
+    "version": "1.4.8",
+    "description": "A discord bot that fills in the gaps ",
+    "repository": {},
+    "author": "Sn0wCrack",
+    "license": "MIT",
+    "main": "./dist/src/index.js",
+    "bin": {
+        "saucybot": "./dist/src/index.js"
+    },
+    "engines": {
+        "node": ">=16.0.0"
+    },
+    "scripts": {
+        "start": "npm run build && node dist/src/index.js",
+        "start:dev": "nodemon",
+        "build": "tsc",
+        "lint:check": "eslint src/ --ext .ts",
+        "lint:fix": "eslint src/ --ext .ts --fix",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "dependencies": {
+        "adm-zip": "^0.5.5",
+        "cheerio": "^1.0.0-rc.3",
+        "discord.js": "^13.3.0",
+        "dotenv": "^10.0.0",
+        "fluent-ffmpeg": "^2.1.2",
+        "got": "^11.0.0",
+        "html-to-text": "^8.0.0",
+        "luxon": "^2.2.0",
+        "picocolors": "^1.0.0",
+        "pixiv-web-api": "^0.1.5",
+        "rimraf": "^3.0.2",
+        "tough-cookie": "^4.0.0",
+        "twitter-api-client": "^1.3.8"
+    },
+    "devDependencies": {
+        "@types/adm-zip": "^0.4.33",
+        "@types/cheerio": "^0.22.30",
+        "@types/fluent-ffmpeg": "^2.1.20",
+        "@types/html-to-text": "^8.0.1",
+        "@types/luxon": "^2.0.8",
+        "@types/node": "^16.11.12",
+        "@types/rimraf": "^3.0.1",
+        "@types/tough-cookie": "^4.0.1",
+        "@types/ws": "^8.2.2",
+        "@typescript-eslint/eslint-plugin": "^5.7.0",
+        "@typescript-eslint/parser": "^5.7.0",
+        "eslint": "^8.4.1",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "nodemon": "^2.0.12",
+        "prettier": "^2.5.1",
+        "ts-node": "^10.1.0",
+        "typescript": "^4.5.4"
+    }
 }
