--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
+        "@discordjs/builders": "^0.11.0",
+        "@discordjs/rest": "^0.2.0-canary.0",
         "adm-zip": "^0.5.5",
         "cheerio": "^1.0.0-rc.3",
+        "discord-api-types": "^0.26.1",
         "discord.js": "^13.3.0",
         "dotenv": "^10.0.0",
         "fluent-ffmpeg": "^2.1.2",
