--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "saucybot",
-    "version": "1.5.2",
+    "version": "1.6.0",
     "description": "A discord bot that fills in the gaps ",
     "repository": {},
     "author": "Sn0wCrack",
@@ -23,6 +23,7 @@
     "dependencies": {
         "@discordjs/builders": "^0.11.0",
         "@discordjs/rest": "^0.2.0-canary.0",
+        "@sn0wcrack/deviant": "^0.1.4",
         "adm-zip": "^0.5.5",
         "cheerio": "^1.0.0-rc.3",
         "discord-api-types": "^0.26.1",
