--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     },
     "dependencies": {
         "@discordjs/builders": "^0.11.0",
-        "@discordjs/rest": "^0.2.0-canary.0",
+        "@discordjs/rest": "^0.3.0",
         "@sn0wcrack/deviant": "^0.1.4",
         "adm-zip": "^0.5.5",
         "cheerio": "^1.0.0-rc.3",
-        "discord-api-types": "^0.26.1",
-        "discord.js": "^13.3.0",
+        "discord-api-types": "^0.27.2",
+        "discord.js": "^13.6.0",
         "dotenv": "^15.0.0",
         "fluent-ffmpeg": "^2.1.2",
         "got": "^11.0.0",
@@ -37,7 +37,7 @@
         "pixiv-web-api": "^0.1.5",
         "rimraf": "^3.0.2",
         "tough-cookie": "^4.0.0",
-        "twitter-api-client": "^1.3.8"
+        "twitter-api-client": "^1.5.2"
     },
     "devDependencies": {
         "@types/adm-zip": "^0.4.33",
