--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
+        "@sentry/node": "^6.17.9",
+        "@sentry/tracing": "^6.17.9",
         "@sn0wcrack/deviant": "^0.1.4",
         "adm-zip": "^0.5.5",
         "cheerio": "^1.0.0-rc.10",
