feat: add support for redis cache in site mangaers
this should hopefully cut down the number of calls for Twitter since it has to do it all the time, only really helps for popular posts to be fair

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,6 @@ services:
         env_file:
             - .env
         restart: unless-stopped
+    cache:
+        image: "redis:alpine"
+        restart: unless-stopped
