fix: disable in-memory cache on twitter
we don't really need this since we use redis now

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,8 @@ services:
     cache:
         image: "redis:alpine"
         restart: unless-stopped
+        volumes:
+            - cache:/data
+
+volumes:
+    cache:
