chore: package upgrades
change package name to be scoped

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "saucybot",
+    "name": "@sn0wcrack/saucybot",
     "version": "1.7.16",
     "description": "A discord bot that fills in the gaps ",
     "repository": {},
