fix: potential regex issues
this don't really cause any problems most of the time, but could lead to  false positives

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
             - .env
         restart: unless-stopped
     cache:
-        image: "redis:alpine"
+        image: "redis:6-alpine"
         restart: unless-stopped
         volumes:
             - cache:/data
