wip: start work on c# rewrite

--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -50,7 +50,7 @@ jobs:
         with:
           push: true
           context: .
-          file: ./Dockerfile
+          file: ./SaucyBot/Dockerfile
           tags: ${{ steps.docker_meta.outputs.tags }}
           labels: ${{ steps.docker_meta.outputs.labels }}
           cache-from: type=local,src=/tmp/.buildx-cache
