--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -3,42 +3,48 @@ name: 'Continuous Integration'
 on:
   workflow_dispatch:
   push:
-    branches: [ master ]
+    branches: ['develop/v2']
     paths:
-      - '**.ts'
-      - '**.json'
-      - '.eslintignore'
-      - '.prettierrc'
+      - '**.cs'
+      - '**.csproj'
+      - '**.sln'
     tags-ignore:
       - 'v*'
   pull_request:
-    branches: [ master ]
+    branches: ['develop/v2']
     paths:
-      - '**.ts'
-      - '**.json'
-      - '.eslintignore'
-      - '.prettierrc'
+      - '**.cs'
+      - '**.csproj'
+      - '**.sln'
 jobs:
   build:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [ '16', '17' ] # LTS and Latest
+        dotnet-version: ['6.x']
 
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+      
+      - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
+        uses: actions/setup-dotnet@v2
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
-      - run: yarn install --frozen-lockfile
-      - name: Run linter
-        run: yarn lint:check
-        env:
-          CI: true
-      - name: Run build
-        run: yarn build
-        env:
-          CI: true
+          dotnet-version: ${{ matrix.dotnet-version }}
+
+      - uses: actions/cache@v2
+        with:
+          path: ~/.nuget/packages
+          # Look to see if there is a cache hit for the corresponding requirements file
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-nuget
+
+      - name: Install Dependencies
+        run: dotnet restore
+        
+      - name: Build
+        run: dotnet build --configuration Release --no-restore
+        
+      - name: Test
+        run: dotnet test --no-restore --verbosity normal
