fix: docker file copying using wrong folders
fix: mount appsettings.json into container in development docker-compose file until new .env is sorted out

--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -44,7 +44,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          context: .
+          context: ./SaucyBot
           file: ./SaucyBot/Dockerfile
           tags: ${{ steps.docker_meta.outputs.tags }}
           labels: ${{ steps.docker_meta.outputs.labels }}
