fix: docker file copying using wrong folders
fix: mount appsettings.json into container in development docker-compose file until new .env is sorted out

--- a/SaucyBot/docker-compose.yml
+++ b/SaucyBot/docker-compose.yml
@@ -4,6 +4,9 @@ services:
         build: .
         env_file:
             - .env
+        volumes:
+            - ./appsettings.json:/app/appsettings.json
+            - ./appsettings.Development.json:/app/appsettings.Development.json
         restart: unless-stopped
     cache:
         image: "redis:6-alpine"
