feat: allow specifying release mode on docker container
feat: move over to alpine dotnet core images
fix: disable globalization invariant mode and add icu-libs to final image, it appears Discord.Net relies on this behaviour

--- a/SaucyBot/docker-compose.yml
+++ b/SaucyBot/docker-compose.yml
@@ -1,7 +1,10 @@
 version: "3.8"
 services:
     bot:
-        build: .
+        build: 
+            context: .
+            args:
+                CONFIGURATION: "${CONFIGURATION}"
         env_file:
             - .env
         volumes:
