--- a/SaucyBot/Dockerfile
+++ b/SaucyBot/Dockerfile
@@ -1,16 +1,18 @@
-﻿FROM mcr.microsoft.com/dotnet/runtime:6.0 AS base
+﻿ARG CONFIGURATION=Release
+
+FROM mcr.microsoft.com/dotnet/runtime:6.0-alpine AS base
 WORKDIR /app
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:6.0-alpine AS build
 WORKDIR /src
 COPY ["SaucyBot.csproj", "SaucyBot/"]
 RUN dotnet restore "SaucyBot/SaucyBot.csproj"
 COPY . SaucyBot/
 WORKDIR /src/SaucyBot
-RUN dotnet build "SaucyBot.csproj" -c Release -o /app/build
+RUN dotnet build "SaucyBot.csproj" -c "${CONFIGURATION}" -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "SaucyBot.csproj" -c Release -o /app/publish
+RUN dotnet publish "SaucyBot.csproj" -c "${CONFIGURATION}" -o /app/publish
 
 FROM base AS final
 WORKDIR /app
@@ -18,9 +20,15 @@ WORKDIR /app
 LABEL org.opencontainers.image.source="https://github.com/Sn0wCrack/saucybot-discord"
 LABEL org.opencontainers.image.authors="Sn0wCrack"
 
+ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false \
+        LC_ALL=en_US.UTF-8 \
+        LANG=en_US.UTF-8
+
 RUN set -xe; \
-    apt-get update && \
-    apt-get install -y ffmpeg
+    apk add --no-cache --update \
+        libc6-compat \
+        icu-libs \
+        ffmpeg
 
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "SaucyBot.dll"]
