--- a/SaucyBot/SaucyBot.csproj
+++ b/SaucyBot/SaucyBot.csproj
@@ -13,15 +13,31 @@
     <ItemGroup>
         <PackageReference Include="AngleSharp" Version="0.16.1" />
         <PackageReference Include="Discord.Net" Version="3.4.1" />
+        <PackageReference Include="EFCore.NamingConventions" Version="6.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.3">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.3">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
+        <PackageReference Include="Sentry" Version="3.15.0" />
+        <PackageReference Include="Sentry.EntityFramework" Version="3.15.0" />
+        <PackageReference Include="Sentry.Serilog" Version="3.15.0" />
         <PackageReference Include="Serilog" Version="2.10.0" />
         <PackageReference Include="Serilog.Extensions.Hosting" Version="4.2.0" />
         <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
         <PackageReference Include="StackExchange.Redis" Version="2.5.43" />
         <PackageReference Include="Xabe.FFmpeg" Version="5.1.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Database\Migrations" />
     </ItemGroup>
 </Project>
