--- a/SaucyBot/docker-compose.yml
+++ b/SaucyBot/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3.9"
 services:
     bot:
         build: 
@@ -21,6 +21,10 @@ services:
         ports:
             - "3306:3306"
         restart: unless-stopped
+        healthcheck:
+            test: "mysqladmin ping -h 127.0.0.1 -u $$MYSQL_USER --password=$$MYSQL_PASSWORD"
+            timeout: 20s
+            retries: 10
         
     cache:
         image: "redis:6-alpine"
