--- a/SaucyBot/docker-compose.yml
+++ b/SaucyBot/docker-compose.yml
@@ -28,4 +28,6 @@ services:
         
     cache:
         image: "redis:6-alpine"
+        ports:
+            - "6379:6379"
         restart: unless-stopped
