--- a/SaucyBot/SaucyBot.csproj
+++ b/SaucyBot/SaucyBot.csproj
@@ -13,31 +13,32 @@
 
     <ItemGroup>
         <PackageReference Include="AngleSharp" Version="0.16.1" />
-        <PackageReference Include="Discord.Net" Version="3.5.0" />
+        <PackageReference Include="CoreTweet" Version="1.0.0.483" />
+        <PackageReference Include="Discord.Net" Version="3.6.1" />
         <PackageReference Include="EFCore.NamingConventions" Version="6.0.0" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.4">
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.5">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.4" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.4">
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.5" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.5">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.1" />
-        <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.4" />
+        <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.5" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
-        <PackageReference Include="Sentry" Version="3.16.0" />
-        <PackageReference Include="Sentry.EntityFramework" Version="3.16.0" />
-        <PackageReference Include="Sentry.Serilog" Version="3.16.0" />
-        <PackageReference Include="Serilog" Version="2.10.0" />
+        <PackageReference Include="Sentry" Version="3.17.1" />
+        <PackageReference Include="Sentry.EntityFramework" Version="3.17.1" />
+        <PackageReference Include="Sentry.Serilog" Version="3.17.1" />
+        <PackageReference Include="Serilog" Version="2.11.0" />
         <PackageReference Include="Serilog.Extensions.Hosting" Version="4.2.0" />
         <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
         <PackageReference Include="StackExchange.Redis" Version="2.5.61" />
-        <PackageReference Include="Xabe.FFmpeg" Version="5.1.0" />
+        <PackageReference Include="Xabe.FFmpeg" Version="5.2.0" />
     </ItemGroup>
 
     <ItemGroup>
