--- a/SaucyBot/docker-compose.yml
+++ b/SaucyBot/docker-compose.yml
@@ -22,7 +22,7 @@ services:
             - "3306:3306"
         restart: unless-stopped
         healthcheck:
-            test: "mysqladmin ping -h 127.0.0.1 -u $$MYSQL_USER --password=$$MYSQL_PASSWORD"
+            test: 'mysqladmin ping -h 127.0.0.1 -u "$MYSQL_USER" --password="$MYSQL_PASSWORD"'
             timeout: 20s
             retries: 10
         
