--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,15 @@
 NODE_ENV=
 
-DISCORD_CLIENT_ID=
-# For development only
-DISCORD_GUILD_ID=
 DISCORD_API_KEY=
 
-MAXIMUM_EMBEDS=5
+DISCORD_GUILD_ID= # For development only
+DISCORD_CLIENT_ID= # For development only
+
+MAXIMUM_EMBEDS=8
 DISABLED_SITES=
+
+SENTRY_DSN=
+REDIS_URL=
 
 PIXIV_LOGIN=
 PIXIV_PASSWORD=
@@ -27,6 +30,8 @@ TWITTER_API_KEY=
 TWITTER_API_SECRET=
 TWITTER_ACCESS_TOKEN=
 TWITTER_ACCESS_SECRET=
+TWITTER_BEARER_TOKEN=
+TWITTER_READ_DELAY=1350
 
 DEVIANTART_CLIENT_ID=
 DEVIANTART_CLIENT_SECRET=
