chore: dependencies upgrade
chore: document the fact you don't refresh messages
todo: fix hentaifoundry integration, its broke on master too since their update

--- a/SaucyBot/appsettings.json.example
+++ b/SaucyBot/appsettings.json.example
@@ -23,7 +23,7 @@
       "Cookie": "",
       "PostLimit": 5,
       "UgoiraFormat": "mp4",
-      "UgoiraBitrate": 200
+      "UgoiraBitrate": 2000
     },
     "Twitter": {
       "ApiKey": "",
@@ -31,7 +31,7 @@
       "AccessToken": "",
       "AccessSecret": "",
       "BearerToken": "",
-      "Delay": 1350
+      "Delay": "2.00"
     },
     "DeviantArt": {
       "ClientId": 0,
