chore: enable strict mode in typescript
chore: dependency upgrade

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+      "strict": true,
+      "useUnknownInCatchVariables": false,
       "module": "commonjs",
       "esModuleInterop": true,
       "allowSyntheticDefaultImports": true,
