fix; revert some changes from v2 branch in cd

--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -44,8 +44,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          context: ./SaucyBot
-          file: ./SaucyBot/Dockerfile
+          context: .
           tags: ${{ steps.docker_meta.outputs.tags }}
           labels: ${{ steps.docker_meta.outputs.labels }}
           cache-from: type=gha
