--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "twitter-api-client": "^1.5.2"
     },
     "devDependencies": {
+        "@tsconfig/node16": "^1.0.3",
         "@types/adm-zip": "^0.4.33",
         "@types/cheerio": "^0.22.30",
         "@types/fluent-ffmpeg": "^2.1.20",
@@ -54,7 +55,7 @@
         "eslint-plugin-prettier": "^4.0.0",
         "nodemon": "^2.0.12",
         "prettier": "^2.5.1",
-        "ts-node": "^10.1.0",
-        "typescript": "^4.5.4"
+        "ts-node": "^10.8.0",
+        "typescript": "^4.7.4"
     }
 }
