feat: add tests for extensions
fix some bugs with the list extension slice functions
add a safe get range function as well

--- a/SaucyBot.Tests/SaucyBot.Tests.csproj
+++ b/SaucyBot.Tests/SaucyBot.Tests.csproj
@@ -21,4 +21,12 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Integration\Library\Sites" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\SaucyBot\SaucyBot.csproj" />
+    </ItemGroup>
+
 </Project>
