chore: code cleanup
feat: add ability to set spawn feature of shard manager

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 NODE_ENV=
 
 DISCORD_API_KEY=
+DISCORD_RESPAWN_SHARD=false
 
 DISCORD_GUILD_ID= # For development only
 DISCORD_CLIENT_ID= # For development only
