feat: allow configuring spawn timeout
set default on respawn to true since that's the default normally

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 NODE_ENV=
 
 DISCORD_API_KEY=
-DISCORD_RESPAWN_SHARD=false
+DISCORD_SHARD_RESPAWN=
+DISCORD_SHARD_SPAWN_TIMEOUT=
 
 DISCORD_GUILD_ID= # For development only
 DISCORD_CLIENT_ID= # For development only
