--- a/SaucyBot/docker-compose.dev.yml
+++ b/SaucyBot/docker-compose.dev.yml
@@ -22,12 +22,18 @@ services:
             - "3306:3306"
         restart: unless-stopped
         healthcheck:
-            test: 'mysqladmin ping -h 127.0.0.1 -u "$MYSQL_USER" --password="$MYSQL_PASSWORD"'
-            timeout: 20s
+            test: 'mariadb-admin ping -h 127.0.0.1 -u "$MYSQL_USER" --password="$MYSQL_PASSWORD"'
+            timeout: 30s
             retries: 10
+            start_period: 10s
         
     cache:
         image: "redis:7-alpine@sha256:343e6546f35877801de0b8580274a5e3a8e8464cabe545a2dd9f3c78df77542a"
         ports:
             - "6379:6379"
         restart: unless-stopped
+        healthcheck:
+            test: '[ $(redis-cli -h 127.0.0.1 ping) = "PONG" ]'
+            timeout: 30s
+            retries: 10
+            start_period: 10s
