feat: upgrade to alpine 3.19

--- a/SaucyBot/Dockerfile
+++ b/SaucyBot/Dockerfile
@@ -1,9 +1,9 @@
-﻿ARG CONFIGURATION=Release
+ARG CONFIGURATION=Release
 
-FROM mcr.microsoft.com/dotnet/runtime:8.0-alpine3.18@sha256:ff05111de6de4e6b59e93b103ad3ac7463e4fca0150686a50c9015bbfa72d2df AS base
+FROM mcr.microsoft.com/dotnet/runtime:8.0-alpine3.19@sha256:f7a0f3109c33b56b5fef870dc708b9196e61ab4533fe51779c65e67fde14d195 AS base
 WORKDIR /app
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0-alpine3.18@sha256:1aef1b62f0aa76c0565ef21474ee19ea9654e966cf67b077f2c8ad4b8512d55b AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0-alpine3.19@sha256:f0b0bf6e7e016bd6fb90da9a7ba4c2ab0c383335066675b17b758a8bdf5b8a15 AS build
 WORKDIR /src
 COPY ["SaucyBot.csproj", "SaucyBot/"]
 RUN dotnet restore "SaucyBot/SaucyBot.csproj"
@@ -17,16 +17,13 @@ RUN dotnet publish "SaucyBot.csproj" -c "${CONFIGURATION}" -o /app/publish
 FROM base AS final
 WORKDIR /app
 
-LABEL org.opencontainers.image.source="https://github.com/Sn0wCrack/saucybot-discord"
-LABEL org.opencontainers.image.authors="Sn0wCrack"
-
 ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false \
     LC_ALL=en_US.UTF-8 \
     LANG=en_US.UTF-8
 
 RUN set -xe; \
     apk add --no-cache --update \
-        libc6-compat \
+        gcompat \
         icu-libs \
         ffmpeg
 
