feat: support multiple for multiple architectures
upgrade to alpine 3.20

feat: upgrade pixiv client to not constantly check if its logged in or not
still a bug where the first login attempt seems to fail due to the http client not following redirects properly or not applying cookies between redirects

--- a/SaucyBot/Dockerfile
+++ b/SaucyBot/Dockerfile
@@ -1,18 +1,18 @@
 ARG CONFIGURATION=Release
 
-FROM mcr.microsoft.com/dotnet/runtime:8.0-alpine3.19@sha256:12a01c882e69bf0cdc592ec2083b00a8ca538fccc68ba0578c37e91ade2a5233 AS base
+FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/runtime:8.0-alpine3.20@sha256:f2098bf8709d963494d5332b9492a4c66cff0164268774cc0c11dc5027764336 AS base
 WORKDIR /app
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0-alpine3.19@sha256:53af222a293d9d843c966e43feab6167593aeea3ddbac4d45f29e1a463f5c0ca AS build
+FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0-alpine3.20@sha256:658c93223111638f9bb54746679e554b2cf0453d8fb7b9fed32c3c0726c210fe AS build
 WORKDIR /src
 COPY ["SaucyBot.csproj", "SaucyBot/"]
-RUN dotnet restore "SaucyBot/SaucyBot.csproj"
+RUN dotnet restore "SaucyBot/SaucyBot.csproj" -a "${TARGETARCH}"
 COPY . SaucyBot/
 WORKDIR /src/SaucyBot
-RUN dotnet build "SaucyBot.csproj" -c "${CONFIGURATION}" -o /app/build
+RUN dotnet build "SaucyBot.csproj" -c "${CONFIGURATION}" -a "${TARGETARCH}" -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "SaucyBot.csproj" -c "${CONFIGURATION}" -o /app/publish
+RUN dotnet publish "SaucyBot.csproj" -c "${CONFIGURATION}" -a "${TARGETARCH}" -o /app/publish
 
 FROM base AS final
 WORKDIR /app
